[package]
edition = "2018"
name = "radicle-registry-runtime"
description = "Substrate chain runtime for the Radicle Registry"
authors = ["Monadic GmbH <radicle@monadic.xyz>"]
version = "0.0.0"
homepage = "https://github.com/radicle-dev/radicle-registry"
documentation = "https://github.com/radicle-dev/radicle-registry"
license = "GPL-3.0-only"
repository = "https://github.com/radicle-dev/radicle-registry"

[features]
default = ["std"]
std = [
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "parity-scale-codec/std",
    "serde",
    "sr-api/std",
    "sr-io/std",
    "sr-primitives/std",
    "sr-std/std",
    "sr-version/std",
    "substrate-block-builder-runtime-api/std",
    "substrate-consensus-aura-primitives/std",
    "substrate-offchain-primitives/std",
    "substrate-primitives/std",
    "substrate-session/std",
]

[dependencies.parity-scale-codec]
default-features = false
features = ["derive", "full"]
version = "1.0.0"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.101"

[dependencies.pallet-aura]
git = "https://github.com/paritytech/substrate"
rev = "1903f36f7bafea45eababfda9011a239b3aaab6c"
default-features = false

[dependencies.substrate-consensus-aura-primitives]
git = "https://github.com/paritytech/substrate"
rev = "1903f36f7bafea45eababfda9011a239b3aaab6c"
default-features = false

[dependencies.pallet-balances]
git = "https://github.com/paritytech/substrate"
rev = "1903f36f7bafea45eababfda9011a239b3aaab6c"
default_features = false

[dependencies.sr-api]
git = "https://github.com/paritytech/substrate"
rev = "1903f36f7bafea45eababfda9011a239b3aaab6c"
default_features = false

[dependencies.frame-executive]
git = "https://github.com/paritytech/substrate"
rev = "1903f36f7bafea45eababfda9011a239b3aaab6c"
default_features = false

[dependencies.substrate-offchain-primitives]
git = "https://github.com/paritytech/substrate"
rev = "1903f36f7bafea45eababfda9011a239b3aaab6c"
default-features = false

[dependencies.substrate-primitives]
git = "https://github.com/paritytech/substrate"
rev = "1903f36f7bafea45eababfda9011a239b3aaab6c"
default_features = false

[dependencies.sr-std]
git = "https://github.com/paritytech/substrate"
rev = "1903f36f7bafea45eababfda9011a239b3aaab6c"
default_features = false

[dependencies.sr-io]
git = "https://github.com/paritytech/substrate"
rev = "1903f36f7bafea45eababfda9011a239b3aaab6c"
default_features = false

[dependencies.sr-primitives]
git = "https://github.com/paritytech/substrate"
rev = "1903f36f7bafea45eababfda9011a239b3aaab6c"
default_features = false

[dependencies.pallet-randomness-collective-flip]
git = "https://github.com/paritytech/substrate"
rev = "1903f36f7bafea45eababfda9011a239b3aaab6c"
default_features = false

[dependencies.substrate-session]
git = "https://github.com/paritytech/substrate"
rev = "1903f36f7bafea45eababfda9011a239b3aaab6c"
default-features = false

[dependencies.substrate-block-builder-runtime-api]
git = "https://github.com/paritytech/substrate"
rev = "1903f36f7bafea45eababfda9011a239b3aaab6c"
default-features = false

[dependencies.sp-transaction-pool-runtime-api]
git = "https://github.com/paritytech/substrate"
rev = "1903f36f7bafea45eababfda9011a239b3aaab6c"
default-features = false

[dependencies.substrate-inherents]
git = "https://github.com/paritytech/substrate"
rev = "1903f36f7bafea45eababfda9011a239b3aaab6c"
default-features = false

[dependencies.pallet-sudo]
git = "https://github.com/paritytech/substrate"
rev = "1903f36f7bafea45eababfda9011a239b3aaab6c"
default_features = false

[dependencies.frame-support]
git = "https://github.com/paritytech/substrate"
rev = "1903f36f7bafea45eababfda9011a239b3aaab6c"
default_features = false

[dependencies.frame-system]
git = "https://github.com/paritytech/substrate"
rev = "1903f36f7bafea45eababfda9011a239b3aaab6c"
default_features = false

[dependencies.pallet-timestamp]
git = "https://github.com/paritytech/substrate"
rev = "1903f36f7bafea45eababfda9011a239b3aaab6c"
default_features = false

[dependencies.pallet-transaction-payment]
git = "https://github.com/paritytech/substrate"
rev = "1903f36f7bafea45eababfda9011a239b3aaab6c"
default_features = false

[dependencies.sr-version]
git = "https://github.com/paritytech/substrate"
rev = "1903f36f7bafea45eababfda9011a239b3aaab6c"
default_features = false

[dependencies.pallet-grandpa]
git = "https://github.com/paritytech/substrate"
rev = "1903f36f7bafea45eababfda9011a239b3aaab6c"
default_features = false

[build-dependencies]
substrate-wasm-builder-runner = "1.0.2"

[dev-dependencies]
futures01 = "0.1"
rand = "0.7.2"
radicle-registry-client = { path = "../client" }
