[package]
edition = "2018"
name = "radicle-registry-runtime"
description = "Substrate chain runtime for the Radicle Registry"
authors = ["Monadic GmbH <radicle@monadic.xyz>"]
version = "0.0.0"
homepage = "https://github.com/radicle-dev/radicle-registry"
documentation = "https://github.com/radicle-dev/radicle-registry"
license = "GPL-3.0-only"
repository = "https://github.com/radicle-dev/radicle-registry"

[features]
default = ["std"]
std = [
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "parity-scale-codec/std",
    "radicle-registry-core/std",
    "serde",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-pow/std",
    "sp-core/std",
    "sp-io/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std"
]

[dependencies.radicle-registry-core]
path = "../core"
version = "0.0.0"
default-features = false

[dependencies.parity-scale-codec]
default-features = false
features = ["derive", "full"]
version = "1.0.0"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.101"

[dependencies.pallet-balances]
git = "https://github.com/paritytech/substrate"
rev = "b6c96a29d8c0779996145b2b57150a95508997e2"
default_features = false

[dependencies.sp-api]
git = "https://github.com/paritytech/substrate"
rev = "b6c96a29d8c0779996145b2b57150a95508997e2"
default_features = false

[dependencies.frame-executive]
git = "https://github.com/paritytech/substrate"
rev = "b6c96a29d8c0779996145b2b57150a95508997e2"
default_features = false

[dependencies.sp-offchain]
git = "https://github.com/paritytech/substrate"
rev = "b6c96a29d8c0779996145b2b57150a95508997e2"
default-features = false

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate"
rev = "b6c96a29d8c0779996145b2b57150a95508997e2"
default_features = false

[dependencies.sp-std]
git = "https://github.com/paritytech/substrate"
rev = "b6c96a29d8c0779996145b2b57150a95508997e2"
default_features = false

[dependencies.sp-io]
git = "https://github.com/paritytech/substrate"
rev = "b6c96a29d8c0779996145b2b57150a95508997e2"
default_features = false

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate"
rev = "b6c96a29d8c0779996145b2b57150a95508997e2"
default_features = false

[dependencies.pallet-randomness-collective-flip]
git = "https://github.com/paritytech/substrate"
rev = "b6c96a29d8c0779996145b2b57150a95508997e2"
default_features = false

[dependencies.sp-consensus-pow]
git = "https://github.com/paritytech/substrate"
rev = "b6c96a29d8c0779996145b2b57150a95508997e2"
default-features = false

[dependencies.sp-session]
git = "https://github.com/paritytech/substrate"
rev = "b6c96a29d8c0779996145b2b57150a95508997e2"
default-features = false

[dependencies.sp-block-builder]
git = "https://github.com/paritytech/substrate"
rev = "b6c96a29d8c0779996145b2b57150a95508997e2"
default-features = false

[dependencies.sp-transaction-pool]
git = "https://github.com/paritytech/substrate"
rev = "b6c96a29d8c0779996145b2b57150a95508997e2"
default-features = false

[dependencies.sp-inherents]
git = "https://github.com/paritytech/substrate"
rev = "b6c96a29d8c0779996145b2b57150a95508997e2"
default-features = false

[dependencies.pallet-sudo]
git = "https://github.com/paritytech/substrate"
rev = "b6c96a29d8c0779996145b2b57150a95508997e2"
default_features = false

[dependencies.frame-support]
git = "https://github.com/paritytech/substrate"
rev = "b6c96a29d8c0779996145b2b57150a95508997e2"
default_features = false

[dependencies.frame-system]
git = "https://github.com/paritytech/substrate"
rev = "b6c96a29d8c0779996145b2b57150a95508997e2"
default_features = false

[dependencies.pallet-timestamp]
git = "https://github.com/paritytech/substrate"
rev = "b6c96a29d8c0779996145b2b57150a95508997e2"
default_features = false

[dependencies.sp-version]
git = "https://github.com/paritytech/substrate"
rev = "b6c96a29d8c0779996145b2b57150a95508997e2"
default_features = false

[build-dependencies]
substrate-wasm-builder-runner = "1.0.5"

[dev-dependencies]
async-std = { version = "1.4", features = ["attributes"] }
futures01 = "0.1"
rand = "0.7.2"
radicle-registry-client = { path = "../client" }
radicle-registry-test-utils = { path = "../test-utils"}

[dev-dependencies.sp-state-machine]
git = "https://github.com/paritytech/substrate"
rev = "b6c96a29d8c0779996145b2b57150a95508997e2"
default_features = false
