[package]
name = "substrate-subxt"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"

description = "Submit extrinsics (transactions) to a substrate node via RPC"
keywords = ["parity", "substrate", "blockchain"]

include = ["/Cargo.toml", "src/**/*.rs", "/README.md", "/LICENSE"]

[dependencies]
derive_more = "0.14.0"
futures = "0.1.28"
jsonrpc-core-client = { version = "14.0", features = ["ws"] }
log = "0.4"
num-traits = { version = "0.2", default-features = false }
parity-scale-codec = { version = "1.0", default-features = false, features = ["derive", "full"] }
serde = { version = "1.0", features = ["derive"] }
url = "1.7"

[dependencies.runtime_metadata]
package = "frame-metadata"
git = "https://github.com/paritytech/substrate"
rev = "b9e7f09a675b5625cc8b156848d976592e07a409"

[dependencies.runtime_primitives]
package = "sr-primitives"
git = "https://github.com/paritytech/substrate"
rev = "b9e7f09a675b5625cc8b156848d976592e07a409"

[dependencies.runtime_support]
package = "frame-support"
git = "https://github.com/paritytech/substrate"
rev = "b9e7f09a675b5625cc8b156848d976592e07a409"

[dependencies.sr-version]
git = "https://github.com/paritytech/substrate"
rev = "b9e7f09a675b5625cc8b156848d976592e07a409"

[dependencies.pallet-balances]
git = "https://github.com/paritytech/substrate"
rev = "b9e7f09a675b5625cc8b156848d976592e07a409"

[dependencies.pallet-contracts]
git = "https://github.com/paritytech/substrate"
rev = "b9e7f09a675b5625cc8b156848d976592e07a409"

[dependencies.pallet-indices]
git = "https://github.com/paritytech/substrate"
rev = "b9e7f09a675b5625cc8b156848d976592e07a409"

[dependencies.frame-system]
git = "https://github.com/paritytech/substrate"
rev = "b9e7f09a675b5625cc8b156848d976592e07a409"

[dependencies.substrate-primitives]
git = "https://github.com/paritytech/substrate"
rev = "b9e7f09a675b5625cc8b156848d976592e07a409"

[dependencies.substrate-rpc-api]
git = "https://github.com/paritytech/substrate"
rev = "b9e7f09a675b5625cc8b156848d976592e07a409"
package = "sc-rpc-api"

[dependencies.substrate-rpc-primitives]
git = "https://github.com/paritytech/substrate"
rev = "b9e7f09a675b5625cc8b156848d976592e07a409"

[dependencies.txpool-api]
package = "sc-transaction-graph"
git = "https://github.com/paritytech/substrate"
rev = "b9e7f09a675b5625cc8b156848d976592e07a409"


[dev-dependencies]
env_logger = "0.6"
tokio = "0.1"
wabt = "0.9.0"

[dev-dependencies.node-runtime]
git = "https://github.com/paritytech/substrate"
rev = "b9e7f09a675b5625cc8b156848d976592e07a409"

[dev-dependencies.substrate-keyring]
git = "https://github.com/paritytech/substrate"
rev = "b9e7f09a675b5625cc8b156848d976592e07a409"
