[package]
name = "substrate-subxt"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"

description = "Submit extrinsics (transactions) to a substrate node via RPC"
keywords = ["parity", "substrate", "blockchain"]

include = ["/Cargo.toml", "src/**/*.rs", "/README.md", "/LICENSE"]

[dependencies]
derive_more = "0.14.0"
futures = "0.1.28"
jsonrpc-core-client = { version = "14.0", features = ["ws"] }
log = "0.4"
num-traits = { version = "0.2", default-features = false }
parity-scale-codec = { version = "1.0", default-features = false, features = ["derive", "full"] }
serde = { version = "1.0", features = ["derive"] }
url = "1.7"

[dependencies.runtime_metadata]
package = "frame-metadata"
git = "https://github.com/paritytech/substrate"
rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c"

[dependencies.runtime_primitives]
package = "sp-runtime"
git = "https://github.com/paritytech/substrate"
rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c"

[dependencies.runtime_support]
package = "frame-support"
git = "https://github.com/paritytech/substrate"
rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c"

[dependencies.sp-version]
git = "https://github.com/paritytech/substrate"
rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c"

[dependencies.pallet-balances]
git = "https://github.com/paritytech/substrate"
rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c"

[dependencies.pallet-contracts]
git = "https://github.com/paritytech/substrate"
rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c"

[dependencies.pallet-indices]
git = "https://github.com/paritytech/substrate"
rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c"

[dependencies.frame-system]
git = "https://github.com/paritytech/substrate"
rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c"

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate"
rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c"

[dependencies.sp-std]
git = "https://github.com/paritytech/substrate"
rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c"

[dependencies.sc-rpc-api]
git = "https://github.com/paritytech/substrate"
rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c"
package = "sc-rpc-api"

[dependencies.sp-rpc]
git = "https://github.com/paritytech/substrate"
rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c"

[dependencies.txpool-api]
package = "sp-transaction-pool"
git = "https://github.com/paritytech/substrate"
rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c"


[dev-dependencies]
env_logger = "0.6"
tokio = "0.1"
wabt = "0.9.0"

[dev-dependencies.node-runtime]
git = "https://github.com/paritytech/substrate"
rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c"

[dev-dependencies.sp-keyring]
git = "https://github.com/paritytech/substrate"
rev = "2f1f3bd4af2c2521e32d884fbcd7ff991e5cac3c"
