[package]
edition = "2018"
name = "radicle-registry-test-utils"
description = "Testing utilities used in Radicle Registry development"
version = "0.0.0"
authors = ["Monadic GmbH <radicle@monadic.xyz>"]
homepage = "https://github.com/radicle-dev/radicle-registry"
documentation = "https://github.com/radicle-dev/radicle-registry"
license = "GPL-3.0-only"
repository = "https://github.com/radicle-dev/radicle-registry"

[dependencies]
futures01 = "0.1"
rand = "0.7.2"
radicle-registry-client = { path = "../client" }
radicle-registry-core = { path = "../core" }

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate"
rev = "b6c96a29d8c0779996145b2b57150a95508997e2"
