[package]
edition = "2018"
name = "radicle-registry-test-utils"
description = "Testing utilities used in Radicle Registry development"
version = "0.0.0"
authors = ["Monadic GmbH <radicle@monadic.xyz>"]
homepage = "https://github.com/radicle-dev/radicle-registry"
documentation = "https://github.com/radicle-dev/radicle-registry"
license = "GPL-3.0-only"
repository = "https://github.com/radicle-dev/radicle-registry"

[dependencies]
rand = "0.7.2"
radicle-registry-client = { path = "../client" }
radicle-registry-core = { path = "../core" }

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate"
rev = "2051ecbf79ed6a7262e8da1bfd97be4a423b9bcd"
